--- a/cv.tex
+++ b/cv.tex
@@ -186,7 +186,7 @@
 \end{joblong}
 
 \begin{joblong}{Columbia SNL Lab}{New York, NY}{Undergraduate Researcher}{Sept 2025 -- Present}
-\item Developing a high-assurance, real-time runtime for spacecraft flight software using \textbf{eBPF}, \textbf{F Prime}, and \textbf{C/C++}, enabling dynamic multithreaded execution of mission logic with strict safety and millisecond deadline guarantees. (\textbf{Publication In Progress}, advisor: Junfeng Yang)
+\item Developing a high-assurance, real-time runtime for spacecraft flight software using \textbf{eBPF}, \textbf{F Prime}, and \textbf{C/C++}, enabling dynamic multithreaded execution of mission logic with strict safety and millisecond deadline guarantees. Advising Professor: Junfeng Yang. (\textbf{Publication In Progress}) 
 \end{joblong}
 
 \begin{joblong}{NASA Jet Propulsion Lab, Small Scale Flight Software Group}{Pasadena, CA}{Intern, Flight Software Engineering}{May 2025 -- Aug 2025}
