--- a/cv.tex
+++ b/cv.tex
@@ -228,26 +228,29 @@
 %----------------------------------------------------------------------------------------
 \section{Projects}
 
-\begin{joblong}{Columbia Space Initiative}{New York, NY}{Columbia Flight Software Lead, \href{https://docs.proveskit.space/en/latest/}{PROVES} Alcyone (LionCub)}{Aug 2024 -- Present}
-\item 1U CubeSat on a manifested launch for April 2026. Will be \textbf{Columbia's first satellite}, with a mission to take pictures of the Earth from space. Part of the larger PROVES project.
-\item Implemented critical \textbf{F Prime} components including hardware watchdog and power load switch management. Developed camera control software with \textbf{UART} communication for image capture and onboard storage, enabling Columbia's first satellite imaging capabilities.
-\item Mentored younger members on flight software concepts and best practices.
-\end{joblong}
+\begin{joblongsameorg}{Flight Software Lead, LIONESS (6U CubeSat)}{Aug 2024 -- Present}
+\item Scientific mission to image the circumgalactic medium of nearby galaxies in H-alpha spectrum. Spectograph instrument developed with Schiminovich Astronomy Instrumentation Lab, Advised by Professor David Schiminovich.
+\item Architecting flight software infrastructure for a science-driven mission. Co-authored NASA Astrophysics Research and Analysis proposal (rated \textbf{``Selectable''}); manifested via \textbf{NASA CubeSat Launch Initiative}.
+\end{joblongsameorg}
 
-\begin{joblong}{Columbia Space Initiative}{New York, NY}{\href{https://www.nasa.gov/learning-resources/spacesuit-user-interface-technologies-for-students/}{NASA SUITS} Mission Co-Lead}{Sept 2023 -- Jul 2024}
-\item Co-authored a proposal selected as one of \textbf{17 national finalists} and led testing activities at \textbf{NASA Johnson Space Center}.
-\item Developed an AR interface in \textbf{Unity} (\textbf{C\#}) for astronaut assistance, deployed on \textbf{Microsoft HoloLens 2}. Testers successfully completed a simulated Mars mission on-site.
-\end{joblong}
+\begin{joblongsameorg}{Flight Software Lead, \href{https://github.com/Open-Source-Space-Foundation/proves-core-reference}{PROVES} Alcyone (1U CubeSat)}{Aug 2024 -- Present}
+\item \textbf{Columbia's first satellite}, launching April 2026 to capture Earth imagery. Implemented \textbf{F Prime} components for watchdog, power management, and offboard camera control via UART.
+\end{joblongsameorg}
+
+\begin{joblongsameorg}{\href{https://www.nasa.gov/learning-resources/spacesuit-user-interface-technologies-for-students/}{NASA SUITS} Mission Co-Lead}{Sept 2023 -- Jul 2024}
+\item Co-authored proposal selected as one of \textbf{17 national finalists}; led testing at \textbf{NASA Johnson Space Center}.
+\item Developed AR interface in \textbf{Unity} (\textbf{C\#}) for astronaut assistance on \textbf{Microsoft HoloLens 2}.
+\end{joblongsameorg}
 
 %----------------------------------------------------------------------------------------
 %	SKILLS
 %----------------------------------------------------------------------------------------
 \section{Skills}
 \begin{tabularx}{\linewidth}{@{}l X@{}}
-Programming & \normalsize{C, C++, C\#, Python, CircuitPython, MATLAB, F\textsuperscript{\'{}}/F Prime, Unity, scikit-learn, Jupyter}\\
-Domains & \normalsize{Robotic Optimization and Control, Embedded Systems, Flight Software}\\
-Languages & \normalsize{English, Spanish (native proficiency), French (limited)}\\
-Certifications & \normalsize{Amateur Radio (Technician Class)}\\
+Languages & \normalsize{C, C++, C\#, Python, MATLAB, Julia}\\
+Frameworks \& Tools & \normalsize{F Prime, Unity, scikit-learn, CircuitPython, Jupyter}\\
+Focus Areas & \normalsize{ Robotic Optimization \& Control, Embedded Systems, Flight Software}\\
+Other & \normalsize{English (native), Spanish (native), French (limited); Amateur Radio (Technician)}\\
 \end{tabularx}
 
 \vfill
