--- a/citations.bib
+++ b/citations.bib
@@ -6,5 +6,5 @@
       archivePrefix={arXiv},
       primaryClass={cs.RO},
       url={https://arxiv.org/abs/2403.18149},
-      note={IEEE Robotics \& Automation Society (In review)},
+      note={IEEE International Conference on Robotics and Automation (In Review)},
 }
